--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ displayName="Bendy And The Crafting Machine"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 displayURL="https://mcreator.net"
 logoFile="logo.png"
-authors="DrLoganblox07, MarceloGToonz, MCreator"
+authors="DrLoganblox07, MarceloGToonz, Fredboi, MCreator"
 description="Bring the world of the Bendy And The Ink Machine franchise into Minecraft!"
 
 [[dependencies.bendymod]]
